[package]
name = "compiletest-differ"
version = "0.1.0"
authors = ["Orion Gonzalez <ardi@ardis.dev>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
similar = "2.6.0"
serde = { version = "1.0.216", features = ["derive"] }
ron = "0.8.1"
postcard = { version = "1.1.1", features = ["alloc"] }
serde_json = "1.0.140"
